--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Đám cưới Văn Tiến - Nguyễn Hướng 01/12/2024</title>
   <meta property="og:title" content="Thiệp cưới Thanh Trang - Đình Hải 18/11/2023">
   <meta property="og:description" content="Hạnh Phúc Trọn Đời">
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="https://vinhatgiang.github.io/wedding_huong/image/avata.jpg" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="824" />
   <meta property="og:image:height" content="426" />
