--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 <br>
                 <br>
                 <br>
-                Tại chú dể vào hồi 15 giờ, Ngày 01/12/2024.
+                Tại chú Rể vào hồi 15 giờ, Ngày 01/12/2024.
                 <br>
                 Khu phố Quế Tân, Phường Quế Tân,
                 <br>
@@ -527,7 +527,7 @@
           <div class="column is-12 regular-section" data-aos="fade-up" data-aos-easing="linear">
             <h1 class="title has-text-centered section-title">Địa chỉ</h1>
             <p class="tempat is-larger has-text-centered">
-              Nhà cô dâu Và Chú dể
+              Nhà cô dâu Và Chú rể
               <br>
               Khu phố Quế Tân, Phường Quế Tân,
               <br>
