update phone number

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Đám cưới Văn Tiến - Nguyễn Hướng 01/12/2024</title>
-  <meta property="og:title" content="Thiệp cưới Thanh Trang - Đình Hải 18/11/2023">
+  <meta property="og:title" content="Thiệp cưới Văn Tiến - Nguyễn Hướng 01/12/2024">
   <meta property="og:description" content="Hạnh Phúc Trọn Đời">
   <meta property="og:image" content="https://vinhatgiang.github.io/wedding_huong/image/avata.jpg" />
   <meta property="og:image:type" content="image/png" />
@@ -165,7 +165,7 @@
         </svg>
       </a>
       <!-- Pesan Sentuh Love -->
-      <p id="ket">Tap LOVE</p>
+      <p id="ket">Chạm vào Trái Tim</p>
     </div>
   </div>
   <div class="sakura-falling" style="height: max-content;"></div>
@@ -548,7 +548,7 @@
             </a>
           </div>
 
-          <a href="tel:0866835331" class="button btn-whatsapp" target="_blank" data-aos="zoom-in">
+          <a href="tel:037783579" class="button btn-whatsapp" target="_blank" data-aos="zoom-in">
             <i class="fab fa-whatsapp"></i>
             &nbsp;&nbsp; Liên lạc với cô dâu
           </a>
