--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <h4 class="subtitle">
               01 Tháng 12 2024
               </br>
-              <span class="subtitlea">(Tức 01 Tháng 11 năm Nhâm Thìn)</span>
+              <span class="subtitlea">(Tức 01 Tháng 11 năm Giáp Thìn)</span>
               <br>
               Quế Tân - Quế Võ
               </br>
